service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: petclinic
spec:
  selector:
    app: spring-petclinic
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
